--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -52,44 +52,67 @@ build:
     - ssh-add ~/.ssh/id_rsa
     - ssh-keyscan -H vps.purintech.id.vn >> ~/.ssh/known_hosts 2>/dev/null || echo "SSH keyscan failed"
   script:
-    - echo "Transferring source code to server for Docker build and database deployment..."
-    - echo "Preparing optimized source code archive..."
-    - cd project_source
-    - echo "Excluding unnecessary files from archive..."
-    - tar --exclude='*.git*' --exclude='bin' --exclude='obj' --exclude='*.vs*' --exclude='node_modules' -czf ../project.tar.gz .
-    - cd ..
-    - echo "Archive size $(du -h project.tar.gz | cut -f1)"
-    - echo "Checking server disk space and uploading source code..."
-    - ssh -o StrictHostKeyChecking=no fsoftguy@vps.purintech.id.vn "df -h ~/ && echo 'Available space checked'"
-    - echo "Uploading source code (with retry logic)..."
-    - |
-      for i in {1..3}; do
-        echo "Upload attempt $i/3..."
-        if scp -o StrictHostKeyChecking=no -o ConnectTimeout=60 project.tar.gz fsoftguy@vps.purintech.id.vn:~/project.tar.gz; then
-          echo "Upload successful!"
-          break
-        else
-          echo "Upload failed on attempt $i"
-          if [ $i -eq 3 ]; then
-            echo "All upload attempts failed!"
-            exit 1
-          fi
-          sleep 5
-        fi
-      done
+    - echo "Direct deployment to server without file upload..."
+    - echo "Connecting to server for cleanup and direct git clone..."
     - |
       timeout 600 ssh -o StrictHostKeyChecking=no -o ConnectTimeout=30 -o ServerAliveInterval=60 fsoftguy@vps.purintech.id.vn "
         set -e
-        echo 'Creating build directory...'
-        BUILD_DIR=~/docker-builds/team03-build-\$(date +%Y%m%d-%H%M%S)
-        mkdir -p \$BUILD_DIR
-        echo \"Build directory: \$BUILD_DIR\"
+        echo 'Checking current disk space...'
+        df -h ~/
         
-        echo 'Moving source code to build directory...'
+        echo 'Performing aggressive cleanup to free disk space...'
+        
+        # Clean up Docker system
+        echo 'Cleaning Docker system...'
+        export PATH=\"\$HOME/bin:\$PATH\"
+        export DOCKER_HOST=\"unix:///run/user/\$(id -u)/docker.sock\"
+        
+        systemctl --user start docker.service 2>/dev/null || echo 'Docker service already running'
+        sleep 3
+        
+        # Stop all running containers
+        docker stop \$(docker ps -q) 2>/dev/null || echo 'No running containers'
+        
+        # Remove all containers
+        docker container prune -f 2>/dev/null || echo 'Container prune completed'
+        
+        # Remove unused images
+        docker image prune -a -f 2>/dev/null || echo 'Image prune completed'
+        
+        # Remove unused volumes
+        docker volume prune -f 2>/dev/null || echo 'Volume prune completed'
+        
+        # Remove unused networks
+        docker network prune -f 2>/dev/null || echo 'Network prune completed'
+        
+        # Clean up old build directories
+        echo 'Cleaning old build directories...'
+        rm -rf ~/docker-builds/* 2>/dev/null || echo 'No old builds to clean'
+        rm -rf ~/project.tar.gz 2>/dev/null || echo 'No old project archive'
+        
+        # Clean up logs
+        echo 'Cleaning logs...'
+        sudo journalctl --vacuum-time=1d 2>/dev/null || echo 'Log cleanup completed'
+        
+        # Clean package cache
+        echo 'Cleaning package cache...'
+        sudo apt-get clean 2>/dev/null || echo 'Package cache cleaned'
+        sudo apt-get autoremove -y 2>/dev/null || echo 'Autoremove completed'
+        
+        echo 'Disk space after cleanup:'
+        df -h ~/
+        
+        echo 'Setting up fresh build environment...'
+        BUILD_DIR=~/team03-direct-build
+        rm -rf \$BUILD_DIR
+        mkdir -p \$BUILD_DIR
         cd \$BUILD_DIR
-        mv ~/project.tar.gz .
-        tar -xzf project.tar.gz
-        rm project.tar.gz
+        
+        echo 'Cloning repository directly on server...'
+        git clone -b $TARGET_BRANCH --depth 1 \"https://${GIT_USERNAME}:${GIT_ACCESS_TOKEN}@git.fa.edu.vn/hcm25_cpl_net_06/team03_be.git\" .
+        
+        echo 'Repository cloned successfully!'
+        ls -la
         
         echo 'Setting up Docker environment...'
         export PATH=\"\$HOME/bin:\$PATH\"
@@ -136,17 +159,26 @@ build:
           export VNPAY_HASH_SECRET='4046G9C8YY9H8WFSJG8AVB9VZNTT1D68'
           export EMAIL_PASSWORD='jurk cvow hmtg dovz'
           
+          echo 'Checking for docker-compose.production.yml...'
+          if [ ! -f docker-compose.production.yml ]; then
+            echo 'Using docker-compose.yml as fallback...'
+            COMPOSE_FILE='docker-compose.yml'
+          else
+            echo 'Using docker-compose.production.yml...'
+            COMPOSE_FILE='docker-compose.production.yml'
+          fi
+          
           # Step 1: Stop existing services
           echo 'Stopping existing services...'
-          docker-compose -f docker-compose.production.yml down 2>/dev/null || echo 'No existing services running'
+          docker-compose -f \$COMPOSE_FILE down 2>/dev/null || echo 'No existing services running'
           
           # Step 2: Clean up old containers and volumes if needed
           echo 'Cleaning up old containers...'
           docker container prune -f 2>/dev/null || echo 'Container cleanup completed'
           
           # Step 3: Deploy full stack
-          echo 'Starting full stack deployment...'
-          docker-compose -f docker-compose.production.yml up -d
+          echo \"Starting full stack deployment with \$COMPOSE_FILE...\"
+          docker-compose -f \$COMPOSE_FILE up -d
           
           if [ \$? -eq 0 ]; then
             echo 'Full stack deployment successful!'
@@ -155,7 +187,7 @@ build:
             sleep 20
             
             echo 'Checking service status...'
-            docker-compose -f docker-compose.production.yml ps
+            docker-compose -f \$COMPOSE_FILE ps
             
             echo 'Testing database connection...'
             DB_STATUS=\$(docker exec team03-db pg_isready -U postgres -d team03_db 2>/dev/null || echo 'NOT_READY')
@@ -192,7 +224,7 @@ build:
           else
             echo 'ERROR: Full stack deployment failed!'
             echo 'Checking docker-compose logs...'
-            docker-compose -f docker-compose.production.yml logs --tail=50 || echo 'No compose logs available'
+            docker-compose -f \$COMPOSE_FILE logs --tail=50 || echo 'No compose logs available'
             echo 'BUILD_STATUS=DEPLOY_FAILED' > ~/build_status.txt
           fi
         else
@@ -204,7 +236,10 @@ build:
         cd ~
         rm -rf \$BUILD_DIR
         
-        echo 'Build process completed!'
+        echo 'Final disk space check:'
+        df -h ~/
+        
+        echo 'Build and deployment process completed!'
       "
     - ssh -o StrictHostKeyChecking=no fsoftguy@vps.purintech.id.vn "cat ~/build_status.txt 2>/dev/null || echo 'BUILD_STATUS=UNKNOWN'" > build_status.txt
     - cat build_status.txt
